# FRASIER_Computer_Vision

./: README.md
frasier_object_detection/: CMakeLists.txt  CMakeLists.txt~  FRASIER_README.md  README.md  package.xml  package.xml~
frasier_object_detection/Documenation/: Descriptors.txt  Descriptors.txt~
frasier_object_detection/camera_info/: senz3d_monocam_calib.yaml
frasier_object_detection/include/FRASIER/: frasier_main.h  virtual_fixtures.h
frasier_object_detection/launch/: Image_modalities.launch~  artag_config.rviz  artags_bringup.launch  artags_bringup.launch~  frasier_computer_vision.launch  frasier_computer_vision.launch~  frasier_minimum_bringup.launch  frasier_object_extraction.launch  parbot_computer_vision.launch~  softkinetic.rviz  softkinetic_camera_demo.launch~  virtual_fixtures_display.launch~
frasier_object_detection/src/: TEST.cpp~  object_seg.cpp~  passthrough_filter.cpp~  plane_seg.cpp~
frasier_object_detection/src/Feedback/: Stream_Handler.cpp  extract_borders.cpp~  normal_cloud.cpp~  softkinetic_start.cpp  softkinetic_start.cpp~  testing_handler.cpp
frasier_object_detection/src/Filters/: passthrough_filter.cpp  radius_conditional_filter.cpp  radius_conditional_filter.cpp~
frasier_object_detection/src/Fixtures/: concave_hull.cpp~  fiducials.cpp  hard_fixtures.cpp
frasier_object_detection/src/Images/: fixed_base_tool.cpp  fixed_base_tool.cpp~  intraoperative_image.cpp~  normal_components.cpp~
frasier_object_detection/src/Objects/: cylinder_fit_cup.cpp  cylinder_fit_cup.cpp~  euclidean_cluster.cpp  euclidean_cluster.cpp~  (+2 more)
(+50 files in other folders)
